--- a/index.html
+++ b/index.html
@@ -296,10 +296,7 @@
                         </div>
                         </li>
                         <li>
-                                <div class="timeline-badge"><i class="fas fa-project-diagram"></i>
-
-
-                
+                                <div class="timeline-badge"><i class="fas fa-robot"></i>
                                 </div>
                             <div class="timeline-panel-container-inverted">
                                 <div class="timeline-panel">
