--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
                 <li class="nav-item"><a class="nav-link" href="#experience">Expérience</a></li>
                 <li class="nav-item"><a class="nav-link" href="#education">Formation </a></li>
                 <li class="nav-item"><a class="nav-link" href="#Myproject">Mes projets</a></li>
+                <li class="nav-item"><a class="nav-link" href="https://simoabboubi.github.io/formulaire/contact.html">Mes projets</a></li>
             </ul>
         </div>
     </nav>
