--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <li class="nav-item"><a class="nav-link" href="#experience">Expérience</a></li>
                 <li class="nav-item"><a class="nav-link" href="#education">Formation </a></li>
                 <li class="nav-item"><a class="nav-link" href="#Myproject">Mes projets</a></li>
-                <li class="nav-item"><a class="nav-link" href="formulaire/contact.html" target="_blank" >Contact</a></li>
+
             </ul>
         </div>
     </nav>
@@ -83,6 +83,10 @@
                             Télécharger cv
                         </i>
                     </a>
+                    <a href="formulaire/contact.html" class="button1" target="_blank" >Me contacter</a>
+                    <a href="ville/naissance.html" class="button1" target="_blank" >Découvrez ma ville de naissance </a>
+                    <a href="emploi/tableau.html" class="button1" target="_blank" >Mon emploi du temps  </a>
+
                 </div>
             </div>
 
