--- a/ville/naissance.html
+++ b/ville/naissance.html
@@ -1,1 +1,36 @@
-dsqd
+<!DOCTYPE html>
+<html>
+<head>
+   <meta charset="utf-8"/>
+   <meta name="viewport" content="width=device-width, initial-scale=1">
+   <title> Mohammed ABBOUBI - Développeur WEB  </title>
+ 
+
+   <!-- Utilisation du framework Javascript jQuery-->
+   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+   <!-- Utilisation du framework css bootstrap version 4 -->
+   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+   <!-- Utilisation du script javascript de bootstrap version 4 -->
+   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+    <!-- Utilisation de quelques fonts de google pour que le texte puisse apparaitre plus joli -->
+   <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
+   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+    <!-- ça c'est pour mettre comme couleur du titre en noir -->
+    <meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
+    <meta name="theme-color" content="#ffffff">
+
+    <!--Fichier Css à utiliser en plus du Bootstrap -->
+    <link rel="stylesheet" href="css/style.css">
+    <!-- Un Script Javascript en plus -->
+    <script src="js/scriptmap.js"></script>   
+</head>
+
+<body>
+    
+
+</body>
+
+
+
+</html>
