--- a/ville/naissance.html
+++ b/ville/naissance.html
@@ -8,6 +8,9 @@
 
    <!-- Utilisation du framework Javascript jQuery-->
    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+
    <!-- Utilisation du framework css bootstrap version 4 -->
    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
    <!-- Utilisation du script javascript de bootstrap version 4 -->
@@ -24,10 +27,97 @@
     <link rel="stylesheet" href="css/style.css">
     <!-- Un Script Javascript en plus -->
     <script src="js/scriptmap.js"></script>   
+
 </head>
 
 <body>
+    <p class="centrer"> Je suis né à Fès , voici sa localisation sur google maps </p>
+    <div></div>
+    <div id="map" class="centrer">
+        <!--  image Google Map -->                            
+        <img alt="map" width="300" src="https://maps.googleapis.com/maps/api/staticmap?markers=Fès&amp;zoom=14&amp;size=400x300&amp;scale=2&amp;key=AIzaSyAkmvI9DazzG9p77IShsz_Di7-5Qn7zkcg"> <!-- -->
+    </div>
+    <div></div>
+    <p class="centrer">Alors, on va jouer à un petit jeux, je vous invite à remplir ce formulaire </p>
+
+    <div class="container">
+        <!-- -->
+    <form method="POST" action="" id="formulaire">
+
+        <div class="form-group row">
+            <label for="Nom" class="col-sm-2 col-form-label">Nom : </label>
+            <div class="col-sm-10">
+                <input type="text" class="form-control" id="nom" placeholder="Insérer votre nom">
+            </div>
+        </div>
+
+        <div class="form-group row">
+            <label for="Prenom" class="col-sm-2 col-form-label">Prénom : </label>
+            <div class="col-sm-10">
+                <input type="text" class="form-control" id="Prenom" placeholder="Insérer votre prénom">
+            </div>
+        </div>
+       
+        <div class="form-group row">
+            <label for="datedenaissance" class="col-sm-2 col-form-label">Date de naissance : </label>
+            <div class="col-sm-10">
+                <input type="date" class="form-control" id="datedenaissance" placeholder="JJ/MM/AAAA">
+            </div>
+        </div>
+
+        <div class="form-group row">
+            <label for="ville" class="col-sm-2 col-form-label">ville : </label>
+            <div class="col-sm-10">
+                <input type="text" class="form-control" id="ville" placeholder="Insérer la ville actuel ou votre adresse">
+            </div>
+        </div>
+
+        <div class="form-group row">
+                <label for="email" class="col-sm-2 col-form-label">Email : </label>
+                <div class="col-sm-10">
+                    <input type="email" class="form-control" id="email" placeholder="name@example.com">
+                </div>
+         </div>
+
+
+
+        <button type="submit" class="btn btn-primary" id="envoyer">
+            Valider
+        </button>
+
+
+    </form>
     
+    <!--POP UP Fenêtre  -->
+
+    <div class="modal" tabindex="-1" role="dialog" id="myModal">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                  <h5 class="modal-title">Bonjour </h5>
+                  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                  </button>
+                </div>
+
+                <div class="modal-body">
+
+                  <p>Veuillez remplir tous ces champs SVP ! </p>
+
+                   <div id="googleMap" style="width:100%;height:400px;">
+                    <div id="error"></div>
+                   </div>
+
+                </div>
+
+                <div class="modal-footer"> 
+                  <button type="button" class="btn btn-primary" data-dismiss="modal">ok</button>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- -->
+</div>
 
 </body>
 
