--- a/index.html
+++ b/index.html
@@ -202,9 +202,9 @@
             <div class="timeline-panel-container-inverted">
                 <div class="timeline-panel">
                     <div class="timeline-heading">
-                        <h3>OCP SA Maroc </h3>
+                        <h3> Office chérifien des phosphates kho Maroc </h3>
                         <h4>stagiaire</h4>
-                        <p class="text-muted"><i class="fas fa-clock"></i> mai 2019 – juil 2019 (3 mois)</p>
+                        <p class="text-muted"><i class="fas fa-clock"></i> juillet 2017 – septembre 2017 (2 mois)</p>
                     </div>
                     <div class="timeline-body">
                         
