--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
                      <div class="timeline-heading">
                         <h3>Office chérifien des phosphates SA Maroc </h3>
                         <h4>stagiaire</h4>
-                        <p class="text-muted"><i class="fas fa-clock"></i> mai 2019 – juil 2019 (2 mois)</p>
+                        <p class="text-muted"><i class="fas fa-clock"></i> Avril 2019 – juin 2019 (2 mois)</p>
                     </div>
                     <div class="timeline-body">
                         
