--- a/index.html
+++ b/index.html
@@ -303,6 +303,19 @@
                                         <p>Réalisation d'un Robot - Compétition </p>                                    </div>
                                 </div>
                             </div>
+                            <div class="timeline-panel-container">
+                            <div class="timeline-panel">
+                                <div class="timeline-heading">
+                                    <h3>Projet fin des Etudes(licence)  </h3>
+                                    <h4>Office chérifien des phosphates SA Maroc </h4>
+                                    <p class="text-muted"><i class="fas fa-robot"></i> avril 2019 - juin 2020</p>
+                                </div>
+                                <div class="timeline-body">
+                                    
+                                    <p>Réalisation d'une platforme de supervesion - projet fin d'etude</p>                                   
+                                </div>
+                            </div>
+                        </div>
                     </ul>
                 </div>
 </section>
