--- a/emploi/tableau.html
+++ b/emploi/tableau.html
@@ -3,7 +3,9 @@
 
 <head>
     <meta charset="utf-8"/>
+    
     <meta name="viewport" content="width=device-width, initial-scale=1">
+  
     <title> Mohammed ABBOUBI - Développeur WEB  </title>
    
     <!-- boostrap v4 : Documentation : https://getbootstrap.com/docs/4.0/getting-started/download/-->
@@ -48,19 +50,19 @@
          </tr>
          <tr class="nth-child" id="matin1">
             <td>8h30 - 10h00</td>
+            <td> CM Maths pour l'ingénieur Mme.EL ALOUI  </td>
             <td> </td>
-            <td> </td>
-            <td> </td>
-            <td> </td>
-            <td> </td>
+            <td> TP Maths pour l'ingénieur Mme.DELOURIME </td>
+            <td> FORMATION FACULATAIF </td>
+            <td> Projet Thématique  </td>
         </tr>
         <tr class="nth-child" id="matin2">
             <td>10h15 - 11h45</td>
+            <td> CM Maths pour l'ingénieur Mme.EL ALOUI </td>
             <td> </td>
-            <td> </td>
-            <td> </td>
-            <td> </td>
-            <td> </td>
+            <td>  TP Maths pour l'ingénieur Mme.DELOURIME </td>
+            <td> FORMATION FACULATAIF </td>
+            <td> Projet Thématique  </td>
         </tr>
         <tr class="nth-child" id="pausedej">
             <td>12h00 - 13h30</td>
@@ -73,18 +75,20 @@
         <tr class="nth-child" id="aprem1">
             <td>13h45 - 15h15</td>
             <td> </td>
-            <td> </td>
-            <td> </td>
-            <td> </td>
-            <td> </td>
+            <td> CM intro au traitement de signale M.OUDRE</td>
+            <td> CM WEB M.FOUGHALI </td>
+            <td> FORMATION FACULATAIF </td>
+            <td>CM intro au traitement de signale M.OUDRE </td>
+
         </tr>
         <tr class="nth-child" id="aprem2">
             <td>15h30 - 17h00</td>
             <td> </td>
-            <td> </td>
-            <td> </td>
-            <td> </td>
-            <td> </td>
+            <td>TD intro au traitement de signale M.OUDRE </td>
+            <td> CM WEB M.FOUGHALI </td>
+            <td> FORMATION FACULATAIF </td>
+            <td>TD intro au traitement de signale M.OUDRE </td>
+
         </tr>
         
  </table>
