--- a/emploi/tableau.html
+++ b/emploi/tableau.html
@@ -28,7 +28,7 @@
     <!-- Script Javascript sous jQuery pour la validation du Formulaire  -->
     <script src="form-jquery-validation.js"></script>   
     <!-- CSS -->
-    <link rel="stylesheet" href="css/tableau.css">
+    <link rel="stylesheet" href="css/tableau.css"/>
 
 
 </head>
