--- a/ville/naissance.html
+++ b/ville/naissance.html
@@ -31,6 +31,9 @@
 </head>
 
 <body>
+   <video width="320" height="240" controls>
+      <source src="/ville/video/Ma vidéo.mp4" type=video/mp4>
+    </video>
     <p class="centrer"> Je suis né à Fès , voici sa localisation sur google maps </p>
     <div></div>
     <div id="map" class="centrer">
