--- a/index.html
+++ b/index.html
@@ -83,6 +83,16 @@
                             Télécharger cv
                         </i>
                     </a>
+                    <a href="docs/pcr.pdf" class="button1" target="_blank">
+                        <i class="far fa-file">
+                            Télécharger PCR
+                        </i>
+                    </a>
+                    <a href="docs/Sérologie.pdf" class="button1" target="_blank">
+                        <i class="far fa-file">
+                            Télécharger PCR
+                        </i>
+                    </a>
                     <a href="formulaire/contact.html" class="button1" target="_blank" >Me contacter</a>
                     <a href="ville/naissance.html" class="button1" target="_blank" >Découvrez ma ville de naissance </a>
                     <a href="emploi/tableau.html" class="button1" target="_blank" >Mon emploi du temps  </a>
